# codex-deltas-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  Justfile  README.md  pyproject.toml
.codex-plugin/: plugin.json
automations/changelog-template/: automation.toml
automations/codex-git-changelog/: automation.toml
lib/codex_config/: automation_state.py  shared.py
lib/codex_config/commands/: analyze_config.py  analyze_repo.py  config_file_sync.py  config_key_lifecycle.py  config_maintenance.py  config_validate.py  discover_range.py  orchestrate_config.py  synthesize_config.py  update_state.py  validate_config.py
skills/analyze-config/: SKILL.md
skills/analyze-config/agents/: openai.yaml
skills/analyze-config/references/: rules.md
skills/analyze-config/scripts/: classify_config_keys.py
skills/analyze-repo/: SKILL.md
skills/analyze-repo/agents/: openai.yaml
skills/codex-git-changelog/: SKILL.md
skills/codex-git-changelog/references/: rules.md
skills/compose-report/: SKILL.md
skills/compose-report/agents/: openai.yaml
skills/config-file-sync/: SKILL.md
skills/config-file-sync/agents/: openai.yaml
skills/config-file-sync/references/: rules.md
skills/config-file-sync/scripts/: sync_config_files.py  validate_config_sync.py
skills/config-key-lifecycle/: SKILL.md
skills/config-key-lifecycle/agents/: openai.yaml
skills/config-key-lifecycle/references/: rules.md
skills/config-key-lifecycle/scripts/: classify_config_keys.py
skills/config-maintenance/: SKILL.md
skills/config-maintenance/agents/: openai.yaml
skills/config-maintenance/references/: rules.md
skills/config-maintenance/scripts/: run_config_maintenance.py
skills/config-validate/: SKILL.md
skills/config-validate/agents/: openai.yaml
skills/config-validate/references/: rules.md
skills/config-validate/scripts/: validate_config_sync.py
skills/discover-range/: SKILL.md
skills/discover-range/agents/: openai.yaml
skills/orchestrate/: SKILL.md
skills/orchestrate-config/: SKILL.md
skills/orchestrate-config/agents/: openai.yaml
skills/orchestrate-config/references/: rules.md
skills/orchestrate-config/scripts/: config_maintenance_lib.py  run_config_maintenance.py
skills/orchestrate/agents/: openai.yaml
skills/orchestrate/references/: rules.md
skills/synthesize-config/: SKILL.md
skills/synthesize-config/agents/: openai.yaml
skills/synthesize-config/references/: rules.md
skills/synthesize-config/scripts/: sync_config_files.py
skills/update-state/: SKILL.md
skills/update-state/agents/: openai.yaml
skills/validate-config/: SKILL.md
skills/validate-config/agents/: openai.yaml
skills/validate-config/references/: rules.md
skills/validate-config/scripts/: validate_config_sync.py
tests/: test_runtime_sync.py
