[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-deltas"
version = "0.5.0"
description = "Codex delta workflow skills and supporting tooling"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tomlkit>=0.13,<1",
]

[project.scripts]
codex-delta-discover-range = "codex_config.commands.discover_range:main"
codex-delta-analyze-repo = "codex_config.commands.analyze_repo:main"
codex-delta-analyze-config = "codex_config.commands.analyze_config:main"
codex-delta-synthesize-config = "codex_config.commands.synthesize_config:main"
codex-delta-validate-config = "codex_config.commands.validate_config:main"
codex-delta-orchestrate-config = "codex_config.commands.orchestrate_config:main"
codex-delta-update-state = "codex_config.commands.update_state:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]

[tool.uv]
package = true
